--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,8 @@
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import "./ui/posts";
+
+.help {
+    display: block;
+    font-size: 0.9rem;
+    color: rgb(110, 110, 110);
+}
