--- a/css/style.css
+++ b/css/style.css
@@ -10735,4 +10735,35 @@ textarea.form-control-lg {
   color: rgb(110, 110, 110);
 }
 
+.avatar {
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.profile-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+}
+
+.profile p {
+  margin: 0px;
+}
+
+.fa-pen-to-square {
+  color: rgb(167, 167, 167);
+}
+
+.card img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 /*# sourceMappingURL=style.css.map */
