--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,34 @@
     font-size: 0.9rem;
     color: rgb(110, 110, 110);
 }
+
+.avatar {
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+
+.profile-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+}
+
+.profile p {
+    margin: 0px;
+}
+
+.fa-pen-to-square {
+    color: rgb(167, 167, 167);
+}
+
+.card img {
+    max-width: 100%;
+    max-height: 100%;
+}
